--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,8 @@
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.7.1",
     "argon2": "^0.31.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "config": "^3.3.9",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
